css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";



// Our variables
$base-font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
$base-font-size:   18px;
$base-font-weight: 400;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$spacing-unit:     30px;

$text-color:       #b4b6a6;
$background-color: #000;
$brand-color:      #fff;

$grey-color:       #a5a5a5;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  lighten($grey-color, 15%);

$on-palm:          768px;


// Use media queries like this:
// @include media-query($on-palm) {
//     .wrapper {
//         padding-right: $spacing-unit / 2;
//         padding-left: $spacing-unit / 2;
//     }
// }
@mixin media-query($device) {
    @media screen and (max-width: $device) {
        @content;
    }
}



// Import partials from `sass_dir` (defaults to `_sass`)
@import
        "base",
        "layout",
        "syntax-highlighting"
;

@font-face {
    font-family: 'BebasNeueRegular';
    src: url('/fonts/BebasNeue-webfont.eot');
    src: url('/fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
    url('/fonts/BebasNeue-webfont.woff') format('woff'),
    url('/fonts/BebasNeue-webfont.ttf') format('truetype'),
    url('/fonts/BebasNeue-webfont.svg#BebasNeueRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

body {
    background: #000 url('/img/gradient_bg.jpg') no-repeat;

    .site-header {
        border-bottom: none;

        .site-title {
            opacity: 0;
        }
    }

    .site-footer {
        border-top: none;
    }
}

blockquote {
    border-left: none;
    margin-bottom: 40px;
    font-style: normal;
}

blockquote .small::before,
blockquote footer::before,
blockquote small::before {
    content: '\2014 \00A0';
}

blockquote footer div.quote-name {
    display: inline-block;
    font-size: 1.2em;
}

.home {
    margin: 0 auto;
    width: 940px;
}

/* flexslider overrides */
.home .flexslider {
    background: none;
    border: none;
    text-align: center;
}

.home .flex-direction-nav a {
    height: inherit
}

.center {
    text-align: center;
}

.field-bg {
    padding: 20px;
    background-image: url('/img/field_1140.jpg');
    background-repeat: no-repeat;
}

.about-page {
    p {
        font-size: 1.1em;
        color: #fff;
        background-color: rgba(0, 0, 0, 0.7);
        border-radius: 8px;
        padding: 20px;
        min-height: 275px;
        &.blurb {
            margin-top: 20px;
            text-align: center;
            min-height: 0;
        }
    }
}

nav.site-nav a {
    box-sizing: content-box;
}

.wineglass {
    height: 236px;
    width: 160px;
    background-image: url('/img/wineglass.gif');
    background-size: 160px;
}

.bigtext {
    color: white;
    min-height: 400px;
    opacity: 0;
    transition: opacity 0.2s linear;
    text-shadow: #000 0px 0px 30px;
    font-family: 'BebasNeueRegular', Arial, sans-serif;
    letter-spacing: 1px;
    line-height: initial;
    text-align: justify;
    width: 200px;
    position: relative;
    left: 40px;
    top: 30px;
}

